--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,15 +3,21 @@ name: Release
 on:
   push:
     tags:
-      - 'v*.*.*'  # Trigger on version tags like v1.0.0, v2.1.3, etc.
-  workflow_dispatch:  # Allow manual trigger
+      - "v*.*.*"
+  workflow_dispatch:
 
 permissions:
   contents: write
 
+env:
+  # 建议：保持三平台一致的 Swift minor（6.2.x）
+  SWIFT_VERSION: "6.2"
+  # SwiftPM 可执行 product 名称（不含 .exe）
+  PRODUCT_NAME: "GameCLI"
+
 jobs:
   # ============================================================
-  # 运行测试
+  # 运行测试（以 macOS 为主）
   # ============================================================
   test:
     name: Run Tests
@@ -24,13 +30,13 @@ jobs:
       - name: Setup Swift
         uses: swift-actions/setup-swift@v2
         with:
-          swift-version: '6.2'
+          swift-version: ${{ env.SWIFT_VERSION }}
 
       - name: Run Swift tests
         run: swift test
 
   # ============================================================
-  # macOS 构建
+  # macOS 构建（作为发布门槛）
   # ============================================================
   build-macos:
     name: Build macOS
@@ -44,20 +50,22 @@ jobs:
       - name: Setup Swift
         uses: swift-actions/setup-swift@v2
         with:
-          swift-version: '6.2'
+          swift-version: ${{ env.SWIFT_VERSION }}
 
-      - name: Build release binary
-        run: swift build -c release
-
-      - name: Create release artifact
+      - name: Build + Package (macOS)
+        shell: bash
         run: |
+          set -euo pipefail
+          swift --version
+
+          swift build -c release
+          BIN_PATH="$(swift build -c release --show-bin-path)"
+
           mkdir -p artifact
-          cp .build/release/GameCLI artifact/salu-macos
-          chmod +x artifact/salu-macos
-          cd artifact
-          tar -czf salu-macos.tar.gz salu-macos
-          rm salu-macos
-          ls -lh .
+          cp "$BIN_PATH/${PRODUCT_NAME}" "artifact/salu-macos"
+          chmod +x "artifact/salu-macos"
+
+          (cd artifact && tar -czf salu-macos.tar.gz salu-macos && rm salu-macos && ls -lh .)
 
       - name: Upload macOS artifact
         uses: actions/upload-artifact@v4
@@ -67,12 +75,13 @@ jobs:
           retention-days: 90
 
   # ============================================================
-  # Linux 构建（x86_64 Ubuntu 22.04）
+  # Linux 构建（可选，不阻塞发布）
   # ============================================================
   build-linux:
     name: Build Linux
     runs-on: ubuntu-22.04
     needs: test
+    continue-on-error: true
 
     steps:
       - name: Checkout code
@@ -81,20 +90,22 @@ jobs:
       - name: Setup Swift
         uses: swift-actions/setup-swift@v2
         with:
-          swift-version: '6.2'
+          swift-version: ${{ env.SWIFT_VERSION }}
 
-      - name: Build release binary
-        run: swift build -c release
-
-      - name: Create release artifact
+      - name: Build + Package (Linux)
+        shell: bash
         run: |
+          set -euo pipefail
+          swift --version
+
+          swift build -c release
+          BIN_PATH="$(swift build -c release --show-bin-path)"
+
           mkdir -p artifact
-          cp .build/release/GameCLI artifact/salu-linux-x86_64
-          chmod +x artifact/salu-linux-x86_64
-          cd artifact
-          tar -czf salu-linux-x86_64.tar.gz salu-linux-x86_64
-          rm salu-linux-x86_64
-          ls -lh .
+          cp "$BIN_PATH/${PRODUCT_NAME}" "artifact/salu-linux-x86_64"
+          chmod +x "artifact/salu-linux-x86_64"
+
+          (cd artifact && tar -czf salu-linux-x86_64.tar.gz salu-linux-x86_64 && rm salu-linux-x86_64 && ls -lh .)
 
       - name: Upload Linux artifact
         uses: actions/upload-artifact@v4
@@ -104,105 +115,57 @@ jobs:
           retention-days: 90
 
   # ============================================================
-  # Windows 构建（x86_64）- 允许失败
-  # 参考: https://www.swift.org/install/windows/
-  # 使用 SwiftyLab/setup-swift（支持 Windows/macOS/Linux）
+  # Windows 构建（可选，不阻塞发布）
+  # - 使用 SwiftyLab/setup-swift@latest，避免 winget 不存在
   # ============================================================
   build-windows:
     name: Build Windows
     runs-on: windows-2022
     needs: test
-    # 建议先保留；但请看后面“问题C”的建议
     continue-on-error: true
 
-    env:
-      WINDOWS_EXE: GameCLI.exe
-
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - uses: ilammy/msvc-dev-cmd@v1
+      - name: Git tweaks for Windows (optional)
+        shell: pwsh
+        run: |
+          git config --global core.longpaths true
+          git config --global core.protectNTFS false
+
+      - name: Set up MSVC dev environment
+        uses: ilammy/msvc-dev-cmd@v1
         with:
           arch: x64
 
-      # 关键：用 latest，不要用 v1
       - name: Setup Swift (Windows)
         uses: SwiftyLab/setup-swift@latest
         with:
-          swift-version: '6.2'   # 或者你强锁：'6.2.3'
+          swift-version: ${{ env.SWIFT_VERSION }}
 
-      - name: Verify + Build + Package
+      - name: Build + Package (Windows)
         shell: pwsh
         run: |
+          $ErrorActionPreference = "Stop"
+
+          where.exe swift
           swift --version
+
           swift build -c release
           $binPath = (swift build -c release --show-bin-path).Trim()
 
           New-Item -ItemType Directory -Force -Path artifact | Out-Null
-          $exePath = Join-Path $binPath "${{ env.WINDOWS_EXE }}"
+
+          $exeName = "$env:PRODUCT_NAME.exe"
+          $exePath = Join-Path $binPath $exeName
 
           if (!(Test-Path $exePath)) {
-            Write-Host "ERROR: exe not found: $exePath"
+            Write-Host "ERROR: executable not found: $exePath"
+            Write-Host "Bin path was: $binPath"
             Get-ChildItem -Recurse .build -ErrorAction SilentlyContinue | Select-Object FullName
             exit 1
           }
 
           Copy-Item $exePath artifact\salu-windows-x86_64.exe
-          Compress-Archive artifact\salu-windows-x86_64.exe artifact\salu-windows-x86_64.zip -Force
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: salu-windows-x86_64
-          path: artifact/salu-windows-x86_64.zip
-          retention-days: 90
-
-  # ============================================================
-  # 创建 GitHub Release（macOS 必须成功，其他平台允许失败）
-  # ============================================================
-  create-release:
-    name: Create Release
-    needs: [build-macos, build-linux, build-windows]
-    if: always() && startsWith(github.ref, 'refs/tags/') && needs.build-macos.result == 'success'
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Download macOS artifact
-        if: needs.build-macos.result == 'success'
-        uses: actions/download-artifact@v4
-        with:
-          name: salu-macos
-          path: release-artifacts
-        continue-on-error: true
-
-      - name: Download Linux artifact
-        if: needs.build-linux.result == 'success'
-        uses: actions/download-artifact@v4
-        with:
-          name: salu-linux-x86_64
-          path: release-artifacts
-        continue-on-error: true
-
-      - name: Download Windows artifact
-        if: needs.build-windows.result == 'success'
-        uses: actions/download-artifact@v4
-        with:
-          name: salu-windows-x86_64
-          path: release-artifacts
-        continue-on-error: true
-
-      - name: List artifacts
-        run: ls -la release-artifacts/ || echo "No artifacts found"
-
-      - name: Create Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: |
-            release-artifacts/salu-macos.tar.gz
-            release-artifacts/salu-linux-x86_64.tar.gz
-            release-artifacts/salu-windows-x86_64.zip
-          draft: false
-          prerelease: false
-          generate_release_notes: true
-          fail_on_unmatched_files: false  # 允许部分文件缺失
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          Compress-Archive
