--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ permissions:
   contents: write
 
 env:
-  # 建议：保持三平台一致的 Swift minor（6.2.x）
+  # 建议用 6.2（自动取 6.2.x 可用版本），避免 Windows 上 pin 6.2.3 时 toolchain 索引缺失的问题
   SWIFT_VERSION: "6.2"
   # SwiftPM 可执行 product 名称（不含 .exe）
   PRODUCT_NAME: "GameCLI"
@@ -65,7 +65,7 @@ jobs:
           cp "$BIN_PATH/${PRODUCT_NAME}" "artifact/salu-macos"
           chmod +x "artifact/salu-macos"
 
-          (cd artifact && tar -czf salu-macos.tar.gz salu-macos && rm salu-macos && ls -lh .)
+          (cd artifact && tar -czf salu-macos.tar.gz salu-macos && rm -f salu-macos && ls -lh .)
 
       - name: Upload macOS artifact
         uses: actions/upload-artifact@v4
@@ -105,7 +105,7 @@ jobs:
           cp "$BIN_PATH/${PRODUCT_NAME}" "artifact/salu-linux-x86_64"
           chmod +x "artifact/salu-linux-x86_64"
 
-          (cd artifact && tar -czf salu-linux-x86_64.tar.gz salu-linux-x86_64 && rm salu-linux-x86_64 && ls -lh .)
+          (cd artifact && tar -czf salu-linux-x86_64.tar.gz salu-linux-x86_64 && rm -f salu-linux-x86_64 && ls -lh .)
 
       - name: Upload Linux artifact
         uses: actions/upload-artifact@v4
@@ -139,6 +139,7 @@ jobs:
         with:
           arch: x64
 
+      # 关键：不依赖 winget
       - name: Setup Swift (Windows)
         uses: SwiftyLab/setup-swift@latest
         with:
@@ -152,20 +153,88 @@ jobs:
           where.exe swift
           swift --version
 
+          # Build
           swift build -c release
-          $binPath = (swift build -c release --show-bin-path).Trim()
 
-          New-Item -ItemType Directory -Force -Path artifact | Out-Null
+          # Resolve bin path
+          $binPath = (swift build -c release --show-bin-path).Trim()
+          if (-not $binPath) { throw "swift --show-bin-path returned empty path" }
+
+          # Prepare artifact paths
+          $artifactDir = "artifact"
+          New-Item -ItemType Directory -Force -Path $artifactDir | Out-Null
 
           $exeName = "$env:PRODUCT_NAME.exe"
           $exePath = Join-Path $binPath $exeName
 
-          if (!(Test-Path $exePath)) {
+          if (!(Test-Path -LiteralPath $exePath)) {
             Write-Host "ERROR: executable not found: $exePath"
             Write-Host "Bin path was: $binPath"
             Get-ChildItem -Recurse .build -ErrorAction SilentlyContinue | Select-Object FullName
             exit 1
           }
 
-          Copy-Item $exePath artifact\salu-windows-x86_64.exe
-          Compress-Archive
+          $outExe  = Join-Path $artifactDir "salu-windows-x86_64.exe"
+          $zipPath = Join-Path $artifactDir "salu-windows-x86_64.zip"
+
+          Copy-Item -LiteralPath $exePath -Destination $outExe -Force
+
+          # FIX: always call Compress-Archive with explicit mandatory parameters
+          Compress-Archive -Path $outExe -DestinationPath $zipPath -Force
+
+          Remove-Item -LiteralPath $outExe -Force
+          Get-ChildItem $artifactDir
+
+      - name: Upload Windows artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: salu-windows-x86_64
+          path: artifact/salu-windows-x86_64.zip
+          retention-days: 90
+
+  # ============================================================
+  # Create GitHub Release (only requires macOS success)
+  # ============================================================
+  create-release:
+    name: Create Release
+    needs: [build-macos, build-linux, build-windows]
+    if: always() && startsWith(github.ref, 'refs/tags/') && needs.build-macos.result == 'success'
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Download macOS artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: salu-macos
+          path: release-artifacts
+
+      - name: Download Linux artifact (optional)
+        uses: actions/download-artifact@v4
+        with:
+          name: salu-linux-x86_64
+          path: release-artifacts
+        continue-on-error: true
+
+      - name: Download Windows artifact (optional)
+        uses: actions/download-artifact@v4
+        with:
+          name: salu-windows-x86_64
+          path: release-artifacts
+        continue-on-error: true
+
+      - name: List artifacts
+        run: ls -la release-artifacts/ || echo "No artifacts found"
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            release-artifacts/salu-macos.tar.gz
+            release-artifacts/salu-linux-x86_64.tar.gz
+            release-artifacts/salu-windows-x86_64.zip
+          draft: false
+          prerelease: false
+          generate_release_notes: true
+          fail_on_unmatched_files: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
