--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,9 @@ on:
 permissions:
   contents: read
 
+env:
+  SWIFT_VERSION: '6.2'
+
 jobs:
   test:
     name: Run Tests
@@ -25,9 +28,16 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Swift
+        if: matrix.os != 'windows-2022'
         uses: swift-actions/setup-swift@v2
         with:
-          swift-version: '6.2'
+          swift-version: ${{ env.SWIFT_VERSION }}
+
+      - name: Setup Swift (Windows)
+        if: matrix.os == 'windows-2022'
+        uses: SwiftyLab/setup-swift@latest
+        with:
+          swift-version: ${{ env.SWIFT_VERSION }}
 
       - name: Run Swift tests
         if: matrix.os != 'windows-2022'
